test/types/bool/boolAcceptsQuery.good
boolAcceptsQuery.chpl:3: error: the formal argument 'a' is marked generic with (?) but the type 'bool' is not generic
boolAcceptsQuery.chpl:7: error: the formal argument 'a' is marked generic with (?) but the type 'bool' is not generic
boolAcceptsQuery.chpl:15: error: the formal argument 'r' is marked generic with (?) but the type 'R' is not generic
